Fix spacing on header markers

--- a/app/styles/stylesheet.sass
+++ b/app/styles/stylesheet.sass
@@ -241,8 +241,10 @@ form
     &:before
       content: ">"
       color: lighten($bright-orange, 30%)
-      padding-right: 0.3em
-      margin-left: -0.9em
+      position: relative
+      display: inline-block
+      width: 0
+      left: -0.9em
   h2
     font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif
     font-size: 22px
@@ -252,8 +254,10 @@ form
     &:before
       content: ">>"
       color: lighten($bright-orange, 30%)
-      padding-right: 0.3em
-      margin-left: -1.5em
+      position: relative
+      display: inline-block
+      width: 0
+      left: -1.5em
   h3
     font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif
     font-size: 18px
@@ -264,8 +268,10 @@ form
     &:before
       content: ">>>"
       color: lighten($bright-orange, 30%)
-      padding-right: 0.3em
-      margin-left: -2em
+      position: relative
+      display: inline-block
+      width: 0
+      left: -2em
   h4
     font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif
     font-size: 15px
